--- a/live_score.html
+++ b/live_score.html
@@ -414,6 +414,104 @@
       </div>
     </section>
 
+<!-- ================== LEADERBOARDS ================== -->
+<section class="section-header rounded-2xl shadow-lg p-8">
+  <div class="text-center mb-8">
+    <h2 class="text-3xl font-bold text-gray-900">Leaderboards</h2>
+    <p class="text-gray-600">Totals from Knockout Stage (12) + Semi-finals + Third Place + Final</p>
+  </div>
+
+  <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
+    <!-- Top Scorers -->
+    <div class="group-card rounded-2xl p-6 shadow-md">
+      <div class="flex items-center justify-between mb-4">
+        <h3 class="text-xl font-bold text-gray-800">Top Scorers</h3>
+        <span class="matchday-badge">Goals</span>
+      </div>
+      <ol class="space-y-2 text-sm">
+        <li class="flex justify-between border-b border-gray-100 pb-2">
+          <span>🥇 <strong>Ritam</strong></span><span class="font-semibold">5</span>
+        </li>
+        <li class="flex justify-between border-b border-gray-100 pb-2">
+          <span>🥈 <strong>Monty</strong></span><span class="font-semibold">3</span>
+        </li>
+        <li class="flex justify-between border-b border-gray-100 pb-2">
+          <span>🥉 <strong>Sany</strong></span><span class="font-semibold">3</span>
+        </li>
+        <li class="flex justify-between border-b border-gray-100 pb-2">
+          <span><strong>Vasu</strong></span><span class="font-semibold">3</span>
+        </li>
+        <li class="flex justify-between border-b border-gray-100 pb-2">
+          <span><strong>Jeff</strong></span><span class="font-semibold">2</span>
+        </li>
+        <li class="flex justify-between border-b border-gray-100 pb-2">
+          <span><strong>Rishov</strong></span><span class="font-semibold">2</span>
+        </li>
+        <li class="flex justify-between border-b border-gray-100 pb-2">
+          <span><strong>Soumik</strong></span><span class="font-semibold">2</span>
+        </li>
+        <li class="flex justify-between border-b border-gray-100 pb-2">
+          <span><strong>Supratim</strong></span><span class="font-semibold">2</span>
+        </li>
+        <li class="flex justify-between border-b border-gray-100 pb-2">
+          <span><strong>Tintin</strong></span><span class="font-semibold">2</span>
+        </li>
+        <li class="flex justify-between">
+          <span><strong>Biswajit</strong>, <strong>Dibba</strong>, <strong>Kaustav</strong>, <strong>Pulak</strong>, <strong>Rony</strong>, <strong>Siva</strong>, <strong>Subhojit</strong></span>
+          <span class="font-semibold">1</span>
+        </li>
+      </ol>
+    </div>
+
+    <!-- Top Assists -->
+    <div class="group-card rounded-2xl p-6 shadow-md">
+      <div class="flex items-center justify-between mb-4">
+        <h3 class="text-xl font-bold text-gray-800">Top Assists</h3>
+        <span class="matchday-badge">Assists</span>
+      </div>
+      <ol class="space-y-2 text-sm">
+        <li class="flex justify-between border-b border-gray-100 pb-2">
+          <span>🥇 <strong>Ritam</strong></span><span class="font-semibold">3</span>
+        </li>
+        <li class="flex justify-between border-b border-gray-100 pb-2">
+          <span>🥈 <strong>Kaustav</strong></span><span class="font-semibold">2</span>
+        </li>
+        <li class="flex justify-between border-b border-gray-100 pb-2">
+          <span>🥉 <strong>Satyaki</strong></span><span class="font-semibold">2</span>
+        </li>
+        <li class="flex justify-between border-b border-gray-100 pb-2">
+          <span><strong>Subhanjan</strong></span><span class="font-semibold">2</span>
+        </li>
+        <li class="flex justify-between border-b border-gray-100 pb-2">
+          <span><strong>Supratim</strong></span><span class="font-semibold">2</span>
+        </li>
+        <li class="flex justify-between border-b border-gray-100 pb-2">
+          <span><strong>Akash</strong></span><span class="font-semibold">1</span>
+        </li>
+        <li class="flex justify-between border-b border-gray-100 pb-2">
+          <span><strong>Akash M</strong></span><span class="font-semibold">1</span>
+        </li>
+        <li class="flex justify-between border-b border-gray-100 pb-2">
+          <span><strong>Krishnendu</strong></span><span class="font-semibold">1</span>
+        </li>
+        <li class="flex justify-between border-b border-gray-100 pb-2">
+          <span><strong>Monty</strong></span><span class="font-semibold">1</span>
+        </li>
+        <li class="flex justify-between">
+          <span><strong>Rahul</strong>, <strong>Vasu</strong></span>
+          <span class="font-semibold">1</span>
+        </li>
+      </ol>
+    </div>
+  </div>
+
+  <!-- Notes -->
+  <p class="text-xs text-gray-500 mt-6">
+    Ties are shown alphabetically. If you want live updating leaderboards, we can compute from a JSON of goals/assists instead.
+  </p>
+</section>
+
+    
   </main>
 
   <!-- Footer -->
