--- a/live_score.html
+++ b/live_score.html
@@ -179,13 +179,13 @@
       </div>
     </section>
 
-    <!-- Semis + Third + Final -->
+    <!-- Semi Finals -->
     <section class="section-header rounded-2xl shadow-lg p-8">
-      <h2 class="text-3xl font-bold text-center mb-8">Semi-finals, Third Place & Final</h2>
+      <h2 class="text-3xl font-bold text-center mb-8">Semi-finals</h2>
       <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
 
         <!-- SF1 -->
-        <div class="fixture-card match-card rounded-xl shadow-md p-6">
+        <div class="fixture-card rounded-xl shadow-md p-6">
           <div class="flex justify-between">
             <span>Messiah FC</span>
             <div class="flex flex-col items-center">
@@ -198,7 +198,7 @@
         </div>
 
         <!-- SF2 -->
-        <div class="fixture-card match-card rounded-xl shadow-md p-6">
+        <div class="fixture-card rounded-xl shadow-md p-6">
           <div class="flex justify-between">
             <span>Amigos FC</span>
             <div class="h-10 w-14 flex items-center justify-center bg-gray-900 text-white font-bold rounded-full">3–0</div>
@@ -206,33 +206,38 @@
           </div>
           <div class="mt-4 text-sm"><b>Scorers:</b> Vasu (Kaustav), Sany, Vasu</div>
         </div>
+      </div>
+    </section>
 
-        <!-- Third Place -->
-        <div class="fixture-card match-card rounded-xl shadow-md p-6">
-          <div class="flex justify-between">
-            <span>Messiah FC</span>
-            <div class="h-10 w-14 flex items-center justify-center bg-gray-900 text-white font-bold rounded-full">4–1</div>
-            <span>White Panthers</span>
-          </div>
-          <div class="grid grid-cols-2 gap-4 mt-4 text-sm">
-            <div><b>Scorers</b><ul><li>Rishov (Ritam)</li><li>Ritam</li><li>Ritam (Satyaki)</li><li>Ritam</li></ul></div>
-            <div><b>Scorer</b><ul><li>Soumik</li></ul></div>
-          </div>
+    <!-- Third Place -->
+    <section class="section-header rounded-2xl shadow-lg p-8">
+      <h2 class="text-3xl font-bold text-center mb-8">Third Place Playoff</h2>
+      <div class="fixture-card rounded-xl shadow-md p-6">
+        <div class="flex justify-between">
+          <span>Messiah FC</span>
+          <div class="h-10 w-14 flex items-center justify-center bg-gray-900 text-white font-bold rounded-full">4–1</div>
+          <span>White Panthers</span>
         </div>
-
-        <!-- Final -->
-        <div class="fixture-card match-card rounded-xl shadow-md p-6 final-card">
-          <div class="flex justify-between">
-            <span>Strawhat Pirates</span>
-            <div class="h-10 w-16 flex items-center justify-center bg-amber-700 text-white font-extrabold rounded-full">1–2</div>
-            <span>Amigos FC</span>
-          </div>
-          <div class="grid grid-cols-2 gap-4 mt-4 text-sm">
-            <div><b>Scorer</b><ul><li>Supratim (Monty)</li></ul></div>
-            <div><b>Scorers</b><ul><li>Rony (Rahul)</li><li>Sany</li></ul></div>
-          </div>
+        <div class="grid grid-cols-2 gap-4 mt-4 text-sm">
+          <div><b>Scorers</b><ul><li>Rishov (Ritam)</li><li>Ritam</li><li>Ritam (Satyaki)</li><li>Ritam</li></ul></div>
+          <div><b>Scorer</b><ul><li>Soumik</li></ul></div>
         </div>
+      </div>
+    </section>
 
+    <!-- Final -->
+    <section class="section-header rounded-2xl shadow-lg p-8">
+      <h2 class="text-3xl font-bold text-center mb-8">Final</h2>
+      <div class="fixture-card rounded-xl shadow-md p-6 final-card">
+        <div class="flex justify-between">
+          <span>Strawhat Pirates</span>
+          <div class="h-10 w-16 flex items-center justify-center bg-amber-700 text-white font-extrabold rounded-full">1–2</div>
+          <span>Amigos FC</span>
+        </div>
+        <div class="grid grid-cols-2 gap-4 mt-4 text-sm">
+          <div><b>Scorer</b><ul><li>Supratim (Monty)</li></ul></div>
+          <div><b>Scorers</b><ul><li>Rony (Rahul)</li><li>Sany</li></ul></div>
+        </div>
       </div>
     </section>
 
