--- a/live_score.html
+++ b/live_score.html
@@ -225,8 +225,8 @@
               <div class="font-medium text-gray-600 mb-1">Scorers</div>
               <ul>
                 <li>Rishov (Ritam)</li>
-                <li>Ritam</li>
-                <li>Ritam (Satyaki)</li>
+                <li>Biswajit</li>
+                <li>Rishav (Satyaki)</li>
               </ul>
             </div>
           </div>
