--- a/live_score.html
+++ b/live_score.html
@@ -226,7 +226,7 @@
               <ul>
                 <li>Rishov (Ritam)</li>
                 <li>Biswajit</li>
-                <li>Rishav (Satyaki)</li>
+                <li>Rishov (Satyaki)</li>
               </ul>
             </div>
           </div>
