--- a/team_fixtures.html
+++ b/team_fixtures.html
@@ -13,9 +13,17 @@
     .card:hover { transform: translateY(-2px); box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1); transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1); }
     .team-logo { height: 28px; width: 28px; border-radius: 9999px; object-fit: cover; box-shadow: 0 1px 3px rgb(0 0 0 / 0.15); }
     th, td { white-space: nowrap; }
+    .tbl { border-collapse: separate; border-spacing: 0; overflow: hidden; border-radius: 1rem; }
+    .tbl thead th { position: sticky; top: 0; background: #f1f5f9; z-index: 1; }
+    .tbl th, .tbl td { padding: .55rem .85rem; border-bottom: 1px solid #e2e8f0; }
+    .tbl tbody tr:nth-child(odd) { background: #f8fafc; }
+    .tbl tbody tr:hover { background: #eef2ff; }
+    .tbl .sep-x > * + * { border-left: 1px solid #e2e8f0; }
     .pos { width: 2.5rem; text-align: center; font-weight: 700; }
-    .qualified { background: linear-gradient(135deg, #ecfccb, #d9f99d); }
-    .tbl caption { caption-side: bottom; font-size: 0.85rem; color: #475569; margin-top: .5rem; }
+    .qualified { background: linear-gradient(135deg, #ecfccb, #d9f99d) !important; }
+    .chip { font-size: .7rem; padding: .25rem .5rem; border-radius: 9999px; border: 1px solid #cbd5e1; background:#f8fafc; }
+    .match-grid { display: grid; gap: 1.5rem; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); }
+    .match-card { border-radius: 1rem; border: 1px solid #e5e7eb; background: white; padding: 1.25rem; box-shadow: 0 1px 3px rgba(0,0,0,0.08); }
   </style>
 </head>
 <body class="flex flex-col min-h-screen">
@@ -28,7 +36,7 @@
     <section class="section-header rounded-2xl shadow-lg p-8">
       <div class="text-center mb-6">
         <h1 class="text-4xl font-extrabold text-gray-900">Score Tables</h1>
-        <p class="text-gray-600">Computed from <span class="font-semibold">knockout scores only</span> (before Semi‑finals, Third Place & Final).</p>
+        <p class="text-gray-600">Computed from <span class="font-semibold">group scores only</span>.</p>
       </div>
 
       <div class="grid grid-cols-1 lg:grid-cols-2 gap-8">
@@ -41,37 +49,36 @@
 
           <div class="overflow-x-auto">
             <table class="tbl w-full text-sm">
-              <thead class="text-slate-600">
-                <tr class="border-b">
+              <thead class="text-slate-700">
+                <tr class="sep-x">
                   <th class="pos">#</th>
                   <th class="text-left py-2">Team</th>
                   <th>P</th><th>W</th><th>D</th><th>L</th><th>GF</th><th>GA</th><th>GD</th><th>Pts</th>
                 </tr>
               </thead>
               <tbody class="font-medium">
-                <!-- 1: Messiah FC -->
                 <tr class="qualified">
                   <td class="pos">1</td>
                   <td class="py-2">
                     <div class="flex items-center gap-3">
                       <img src="Messiah FC.jpg" alt="Messiah FC" class="team-logo"/>
                       <span>Messiah FC</span>
+                      <span class="chip">Qualified</span>
                     </div>
                   </td>
                   <td>4</td><td>1</td><td>3</td><td>0</td><td>4</td><td>2</td><td>+2</td><td>6</td>
                 </tr>
-                <!-- 2: White Panthers -->
                 <tr class="qualified">
                   <td class="pos">2</td>
                   <td class="py-2">
                     <div class="flex items-center gap-3">
                       <img src="White Panthers.jpg" alt="White Panthers" class="team-logo"/>
                       <span>White Panthers</span>
+                      <span class="chip">Qualified</span>
                     </div>
                   </td>
                   <td>4</td><td>1</td><td>2</td><td>1</td><td>2</td><td>2</td><td>0</td><td>5</td>
                 </tr>
-                <!-- 3: Thunderbolt -->
                 <tr>
                   <td class="pos">3</td>
                   <td class="py-2">
@@ -84,7 +91,6 @@
                 </tr>
               </tbody>
             </table>
-            <caption class="mt-2 block text-xs text-slate-500">Tiebreakers: Points → Goal Difference → Goals For</caption>
           </div>
         </div>
 
@@ -97,37 +103,36 @@
 
           <div class="overflow-x-auto">
             <table class="tbl w-full text-sm">
-              <thead class="text-slate-600">
-                <tr class="border-b">
+              <thead class="text-slate-700">
+                <tr class="sep-x">
                   <th class="pos">#</th>
                   <th class="text-left py-2">Team</th>
                   <th>P</th><th>W</th><th>D</th><th>L</th><th>GF</th><th>GA</th><th>GD</th><th>Pts</th>
                 </tr>
               </thead>
               <tbody class="font-medium">
-                <!-- 1: Amigos FC -->
                 <tr class="qualified">
                   <td class="pos">1</td>
                   <td class="py-2">
                     <div class="flex items-center gap-3">
                       <img src="Amigos FC.jpg" alt="Amigos FC" class="team-logo"/>
                       <span>Amigos FC</span>
+                      <span class="chip">Qualified</span>
                     </div>
                   </td>
                   <td>4</td><td>2</td><td>1</td><td>1</td><td>3</td><td>1</td><td>+2</td><td>7</td>
                 </tr>
-                <!-- 2: Strawhat Pirates -->
                 <tr class="qualified">
                   <td class="pos">2</td>
                   <td class="py-2">
                     <div class="flex items-center gap-3">
                       <img src="Strawhat Pirates.jpg" alt="Strawhat Pirates" class="team-logo"/>
                       <span>Strawhat Pirates</span>
+                      <span class="chip">Qualified</span>
                     </div>
                   </td>
                   <td>4</td><td>1</td><td>3</td><td>0</td><td>5</td><td>4</td><td>+1</td><td>6</td>
                 </tr>
-                <!-- 3: Red Bulls Eleven -->
                 <tr>
                   <td class="pos">3</td>
                   <td class="py-2">
@@ -140,33 +145,69 @@
                 </tr>
               </tbody>
             </table>
-            <caption class="mt-2 block text-xs text-slate-500">Tiebreakers: Points → Goal Difference → Goals For</caption>
           </div>
         </div>
       </div>
     </section>
 
-    <!-- (Optional) Results Used Disclosure -->
-    <section class="rounded-2xl border bg-white/80 p-6 text-sm text-slate-700">
-      <h3 class="text-lg font-semibold mb-2">Results included</h3>
-      <p>Only the following <span class="font-semibold">12 knockout scores</span> (home/away within each group) are counted. Semi‑finals, Third Place and Final are <span class="font-semibold">excluded</span>.</p>
-      <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mt-4">
-        <ul class="list-disc list-inside">
-          <li>White Panthers 0–0 Messiah FC</li>
-          <li>Thunderbolt 0–1 White Panthers</li>
-          <li>Messiah FC 0–0 Thunderbolt</li>
-          <li>Messiah FC 1–1 White Panthers</li>
-          <li>White Panthers 0–1 Thunderbolt</li>
-          <li>Thunderbolt 1–3 Messiah FC</li>
-        </ul>
-        <ul class="list-disc list-inside">
-          <li>Red Bulls Eleven 2–2 Strawhat Pirates</li>
-          <li>Amigos FC 2–0 Red Bulls Eleven</li>
-          <li>Strawhat Pirates 0–0 Amigos FC</li>
-          <li>Strawhat Pirates 2–2 Red Bulls Eleven</li>
-          <li>Red Bulls Eleven 0–1 Amigos FC</li>
-          <li>Amigos FC 0–1 Strawhat Pirates</li>
-        </ul>
+    <!-- Semi Finals -->
+    <section class="section-header rounded-2xl shadow-lg p-8">
+      <div class="text-center mb-6">
+        <h2 class="text-3xl font-bold">Semi Finals</h2>
+      </div>
+      <div class="match-grid">
+        <div class="match-card">
+          <div class="text-sm uppercase tracking-wide text-slate-500">Semi-final 1</div>
+          <div class="mt-2 text-lg font-semibold">Messiah FC 0–0 Strawhat Pirates</div>
+          <div class="text-xs text-slate-500">Penalties: 1–3 (Strawhat Pirates win)</div>
+          <ul class="mt-3 text-sm text-slate-700 space-y-1">
+            <li>No scorers</li>
+          </ul>
+        </div>
+        <div class="match-card">
+          <div class="text-sm uppercase tracking-wide text-slate-500">Semi-final 2</div>
+          <div class="mt-2 text-lg font-semibold">Amigos FC 3–0 White Panthers</div>
+          <ul class="mt-3 text-sm text-slate-700 space-y-1">
+            <li>Vasu (Kaustav)</li>
+            <li>Sany</li>
+            <li>Vasu</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <!-- Third Place -->
+    <section class="section-header rounded-2xl shadow-lg p-8">
+      <div class="text-center mb-6">
+        <h2 class="text-3xl font-bold">Third Place</h2>
+      </div>
+      <div class="match-grid">
+        <div class="match-card">
+          <div class="text-sm uppercase tracking-wide text-slate-500">Third Place Match</div>
+          <div class="mt-2 text-lg font-semibold">Messiah FC 4–1 White Panthers</div>
+          <ul class="mt-3 text-sm text-slate-700 space-y-1">
+            <li>Messiah FC: Rishov (Ritam), Ritam, Ritam (Satyaki), Ritam</li>
+            <li>White Panthers: Soumik</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <!-- Final -->
+    <section class="section-header rounded-2xl shadow-lg p-8">
+      <div class="text-center mb-6">
+        <h2 class="text-3xl font-bold">Final</h2>
+      </div>
+      <div class="match-grid">
+        <div class=\"match-card border-2 border-amber-400 relative\">
+          <span class=\"absolute -top-4 -right-4 bg-amber-400 rounded-full w-10 h-10 flex items-center justify-center shadow\">👑</span>
+          <div class=\"text-sm uppercase tracking-wide text-slate-500\">Championship Final</div>
+          <div class="mt-2 text-lg font-semibold">Strawhat Pirates 1–2 Amigos FC</div>
+          <ul class="mt-3 text-sm text-slate-700 space-y-1">
+            <li>Strawhat Pirates: Supratim (Monty)</li>
+            <li>Amigos FC: Rony (Rahul), Sany</li>
+          </ul>
+        </div>
       </div>
     </section>
   </main>
@@ -179,7 +220,7 @@
     </div>
   </footer>
 
-  <!-- Header injection (kept for consistency) -->
+  <!-- Header injection -->
   <script type="module">
     import { injectHeader } from "./tournament_header.js";
     injectHeader("#site-header", { active: "fixtures" });
