--- a/team_fixtures.html
+++ b/team_fixtures.html
@@ -10,20 +10,22 @@
     .section-header { background: linear-gradient(135deg, #ffffff 0%, #f8fafc 100%); border: 1px solid #e2e8f0; position: relative; overflow: hidden; }
     .section-header::before { content: ''; position: absolute; top: 0; left: -100%; width: 100%; height: 2px; background: linear-gradient(90deg, transparent, #64748b, transparent); animation: shimmer 3s infinite; }
     @keyframes shimmer { 0% { left: -100%; } 100% { left: 100%; } }
-    .card:hover { transform: translateY(-2px); box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1); transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1); }
-    .team-logo { height: 28px; width: 28px; border-radius: 9999px; object-fit: cover; box-shadow: 0 1px 3px rgb(0 0 0 / 0.15); }
-    th, td { white-space: nowrap; }
-    .tbl { border-collapse: separate; border-spacing: 0; overflow: hidden; border-radius: 1rem; }
-    .tbl thead th { position: sticky; top: 0; background: #f1f5f9; z-index: 1; }
-    .tbl th, .tbl td { padding: .55rem .85rem; border-bottom: 1px solid #e2e8f0; }
-    .tbl tbody tr:nth-child(odd) { background: #f8fafc; }
-    .tbl tbody tr:hover { background: #eef2ff; }
-    .tbl .sep-x > * + * { border-left: 1px solid #e2e8f0; }
-    .pos { width: 2.5rem; text-align: center; font-weight: 700; }
-    .qualified { background: linear-gradient(135deg, #ecfccb, #d9f99d) !important; }
-    .chip { font-size: .7rem; padding: .25rem .5rem; border-radius: 9999px; border: 1px solid #cbd5e1; background:#f8fafc; }
-    .match-grid { display: grid; gap: 1.5rem; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); }
-    .match-card { border-radius: 1rem; border: 1px solid #e5e7eb; background: white; padding: 1.25rem; box-shadow: 0 1px 3px rgba(0,0,0,0.08); }
+    .team-logo { height: 40px; width: 40px; border-radius: 50%; object-fit: cover; box-shadow: 0 2px 6px rgba(0,0,0,0.15); }
+    .match-grid { display: grid; gap: 1.5rem; grid-template-columns: repeat(auto-fit, minmax(350px, 1fr)); }
+    .match-card { border-radius: 1rem; border: 1px solid #e5e7eb; padding: 1.25rem; box-shadow: 0 2px 6px rgba(0,0,0,0.08); display: flex; flex-direction: column; align-items: center; }
+    .match-title { font-weight: 700; text-transform: uppercase; font-size: 0.9rem; color: #475569; margin-bottom: 0.75rem; }
+    .score-row { display: flex; align-items: center; justify-content: space-between; width: 100%; }
+    .team-side { display: flex; flex-direction: column; align-items: center; flex: 1; }
+    .team-name { font-weight: 600; font-size: 0.9rem; margin-top: 0.25rem; text-align: center; }
+    .score { font-size: 1.5rem; font-weight: 700; margin-top: 0.5rem; }
+    .vs { font-weight: 700; font-size: 1rem; color: #475569; margin: 0 1rem; }
+    .scorers { margin-top: 0.75rem; font-size: 0.8rem; color: #374151; text-align: center; }
+
+    /* Stage-specific styling */
+    .semis { background: linear-gradient(135deg, #eff6ff, #dbeafe); }
+    .third { background: linear-gradient(135deg, #f3f4f6, #e5e7eb); }
+    .champion { border: 2px solid #fbbf24; position: relative; background: linear-gradient(135deg, #fffbea, #fef9c3); }
+    .champion::before { content: "👑"; position: absolute; top: -12px; right: -12px; background: #fbbf24; border-radius: 9999px; width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; box-shadow: 0 2px 6px rgba(0,0,0,0.2); font-size: 1.2rem; }
   </style>
 </head>
 <body class="flex flex-col min-h-screen">
@@ -33,20 +35,18 @@
 
   <!-- Main -->
   <main class="flex-grow max-w-7xl mx-auto p-6 space-y-10">
+    <!-- Groups -->
     <section class="section-header rounded-2xl shadow-lg p-8">
       <div class="text-center mb-6">
         <h1 class="text-4xl font-extrabold text-gray-900">Score Tables</h1>
-        <p class="text-gray-600">Computed from <span class="font-semibold">group scores only</span>.</p>
       </div>
-
       <div class="grid grid-cols-1 lg:grid-cols-2 gap-8">
-        <!-- GROUP A -->
+        <!-- Group A -->
         <div class="card rounded-2xl p-6 border border-slate-200 bg-white">
           <div class="flex items-center justify-between mb-4">
             <h2 class="text-2xl font-bold">Group A</h2>
             <span class="px-3 py-1 text-xs font-semibold rounded-full bg-slate-100 border">Thunderbolt · Messiah FC · White Panthers</span>
           </div>
-
           <div class="overflow-x-auto">
             <table class="tbl w-full text-sm">
               <thead class="text-slate-700">
@@ -93,14 +93,12 @@
             </table>
           </div>
         </div>
-
-        <!-- GROUP B -->
+        <!-- Group B -->
         <div class="card rounded-2xl p-6 border border-slate-200 bg-white">
           <div class="flex items-center justify-between mb-4">
             <h2 class="text-2xl font-bold">Group B</h2>
             <span class="px-3 py-1 text-xs font-semibold rounded-full bg-slate-100 border">Amigos FC · Strawhat Pirates · Red Bulls Eleven</span>
           </div>
-
           <div class="overflow-x-auto">
             <table class="tbl w-full text-sm">
               <thead class="text-slate-700">
@@ -156,22 +154,42 @@
         <h2 class="text-3xl font-bold">Semi Finals</h2>
       </div>
       <div class="match-grid">
-        <div class="match-card">
-          <div class="text-sm uppercase tracking-wide text-slate-500">Semi-final 1</div>
-          <div class="mt-2 text-lg font-semibold">Messiah FC 0–0 Strawhat Pirates</div>
-          <div class="text-xs text-slate-500">Penalties: 1–3 (Strawhat Pirates win)</div>
-          <ul class="mt-3 text-sm text-slate-700 space-y-1">
-            <li>No scorers</li>
-          </ul>
+        <!-- SF1 -->
+        <div class="match-card semis">
+          <div class="match-title">Semi-final 1</div>
+          <div class="score-row">
+            <div class="team-side">
+              <img src="Messiah FC.jpg" alt="Messiah FC" class="team-logo" />
+              <div class="team-name">Messiah FC</div>
+              <div class="score">0</div>
+            </div>
+            <div class="vs">VS</div>
+            <div class="team-side">
+              <img src="Strawhat Pirates.jpg" alt="Strawhat Pirates" class="team-logo" />
+              <div class="team-name">Strawhat Pirates</div>
+              <div class="score">0</div>
+            </div>
+          </div>
+          <div class="scorers">Penalties: 1–3 (Strawhat Pirates win)</div>
+          <div class="scorers">No scorers</div>
         </div>
-        <div class="match-card">
-          <div class="text-sm uppercase tracking-wide text-slate-500">Semi-final 2</div>
-          <div class="mt-2 text-lg font-semibold">Amigos FC 3–0 White Panthers</div>
-          <ul class="mt-3 text-sm text-slate-700 space-y-1">
-            <li>Vasu (Kaustav)</li>
-            <li>Sany</li>
-            <li>Vasu</li>
-          </ul>
+        <!-- SF2 -->
+        <div class="match-card semis">
+          <div class="match-title">Semi-final 2</div>
+          <div class="score-row">
+            <div class="team-side">
+              <img src="Amigos FC.jpg" alt="Amigos FC" class="team-logo" />
+              <div class="team-name">Amigos FC</div>
+              <div class="score">3</div>
+            </div>
+            <div class="vs">VS</div>
+            <div class="team-side">
+              <img src="White Panthers.jpg" alt="White Panthers" class="team-logo" />
+              <div class="team-name">White Panthers</div>
+              <div class="score">0</div>
+            </div>
+          </div>
+          <div class="scorers">Scorers: Vasu (Kaustav), Sany, Vasu</div>
         </div>
       </div>
     </section>
@@ -182,13 +200,23 @@
         <h2 class="text-3xl font-bold">Third Place</h2>
       </div>
       <div class="match-grid">
-        <div class="match-card">
-          <div class="text-sm uppercase tracking-wide text-slate-500">Third Place Match</div>
-          <div class="mt-2 text-lg font-semibold">Messiah FC 4–1 White Panthers</div>
-          <ul class="mt-3 text-sm text-slate-700 space-y-1">
-            <li>Messiah FC: Rishov (Ritam), Ritam, Ritam (Satyaki), Ritam</li>
-            <li>White Panthers: Soumik</li>
-          </ul>
+        <div class="match-card third">
+          <div class="match-title">Third Place Match</div>
+          <div class="score-row">
+            <div class="team-side">
+              <img src="Messiah FC.jpg" alt="Messiah FC" class="team-logo" />
+              <div class="team-name">Messiah FC</div>
+              <div class="score">4</div>
+            </div>
+            <div class="vs">VS</div>
+            <div class="team-side">
+              <img src="White Panthers.jpg" alt="White Panthers" class="team-logo" />
+              <div class="team-name">White Panthers</div>
+              <div class="score">1</div>
+            </div>
+          </div>
+          <div class="scorers">Messiah FC: Rishov (Ritam), Ritam, Ritam (Satyaki), Ritam</div>
+          <div class="scorers">White Panthers: Soumik</div>
         </div>
       </div>
     </section>
@@ -199,14 +227,23 @@
         <h2 class="text-3xl font-bold">Final</h2>
       </div>
       <div class="match-grid">
-        <div class=\"match-card border-2 border-amber-400 relative\">
-          <span class=\"absolute -top-4 -right-4 bg-amber-400 rounded-full w-10 h-10 flex items-center justify-center shadow\">👑</span>
-          <div class=\"text-sm uppercase tracking-wide text-slate-500\">Championship Final</div>
-          <div class="mt-2 text-lg font-semibold">Strawhat Pirates 1–2 Amigos FC</div>
-          <ul class="mt-3 text-sm text-slate-700 space-y-1">
-            <li>Strawhat Pirates: Supratim (Monty)</li>
-            <li>Amigos FC: Rony (Rahul), Sany</li>
-          </ul>
+        <div class="match-card champion">
+          <div class="match-title">Championship Final</div>
+          <div class="score-row">
+            <div class="team-side">
+              <img src="Strawhat Pirates.jpg" alt="Strawhat Pirates" class="team-logo" />
+              <div class="team-name">Strawhat Pirates</div>
+              <div class="score">1</div>
+            </div>
+            <div class="vs">VS</div>
+            <div class="team-side">
+              <img src="Amigos FC.jpg" alt="Amigos FC" class="team-logo" />
+              <div class="team-name">Amigos FC</div>
+              <div class="score">2</div>
+            </div>
+          </div>
+          <div class="scorers">Strawhat Pirates: Supratim (Monty)</div>
+          <div class="scorers">Amigos FC: Rony (Rahul), Sany</div>
         </div>
       </div>
     </section>
@@ -216,7 +253,6 @@
   <footer class="bg-gray-950 py-8 text-center text-gray-400 mt-12">
     <div class="max-w-4xl mx-auto px-4">
       <p class="text-lg">© 2025 Football Community. All Rights Reserved.</p>
-      <p class="text-sm mt-2 opacity-75">Bringing together the best in football competition</p>
     </div>
   </footer>
 
