--- a/team_fixtures.html
+++ b/team_fixtures.html
@@ -78,12 +78,12 @@
               <tbody class="font-medium">
                 <tr class="rank-1 qualified">
                   <td class="pos">1</td>
-                  <td class="py-2"><div class="team-cell"><img src="Messiah FC.jpg" alt="Messiah FC" class="team-logo"/><span>Messiah FC</span><span class="chip">Qualified</span></div></td>
+                  <td class="py-2"><div class="team-cell"><img src="Messiah FC.jpg" alt="Messiah FC" class="team-logo"/><span>Messiah FC</span></div></td>
                   <td class="num">4</td><td class="num">1</td><td class="num">3</td><td class="num">0</td><td class="num">4</td><td class="num">2</td><td class="num">+2</td><td class="num">6</td>
                 </tr>
                 <tr class="rank-2 qualified">
                   <td class="pos">2</td>
-                  <td class="py-2"><div class="team-cell"><img src="White Panthers.jpg" alt="White Panthers" class="team-logo"/><span>White Panthers</span><span class="chip">Qualified</span></div></td>
+                  <td class="py-2"><div class="team-cell"><img src="White Panthers.jpg" alt="White Panthers" class="team-logo"/><span>White Panthers</span></div></td>
                   <td class="num">4</td><td class="num">1</td><td class="num">2</td><td class="num">1</td><td class="num">2</td><td class="num">2</td><td class="num">0</td><td class="num">5</td>
                 </tr>
                 <tr>
@@ -119,12 +119,12 @@
               <tbody class="font-medium">
                 <tr class="rank-1 qualified">
                   <td class="pos">1</td>
-                  <td class="py-2"><div class="team-cell"><img src="Amigos FC.jpg" alt="Amigos FC" class="team-logo"/><span>Amigos FC</span><span class="chip">Qualified</span></div></td>
+                  <td class="py-2"><div class="team-cell"><img src="Amigos FC.jpg" alt="Amigos FC" class="team-logo"/><span>Amigos FC</span></div></td>
                   <td class="num">4</td><td class="num">2</td><td class="num">1</td><td class="num">1</td><td class="num">3</td><td class="num">1</td><td class="num">+2</td><td class="num">7</td>
                 </tr>
                 <tr class="rank-2 qualified">
                   <td class="pos">2</td>
-                  <td class="py-2"><div class="team-cell"><img src="Strawhat Pirates.jpg" alt="Strawhat Pirates" class="team-logo"/><span>Strawhat Pirates</span><span class="chip">Qualified</span></div></td>
+                  <td class="py-2"><div class="team-cell"><img src="Strawhat Pirates.jpg" alt="Strawhat Pirates" class="team-logo"/><span>Strawhat Pirates</span></div></td>
                   <td class="num">4</td><td class="num">1</td><td class="num">3</td><td class="num">0</td><td class="num">5</td><td class="num">4</td><td class="num">+1</td><td class="num">6</td>
                 </tr>
                 <tr>
