--- a/team_fixtures.html
+++ b/team_fixtures.html
@@ -53,7 +53,7 @@
       <div class="text-center mb-6">
         <h1 class="text-4xl font-extrabold text-gray-900">Score Tables</h1>
       </div>
-      <div class="grid grid-cols-1 lg:grid-cols-2 gap-8">
+      <div class="grid grid-cols-1 gap-8">
         <!-- Group A -->
         <div class="card rounded-2xl p-6 border border-slate-200 bg-white">
           <div class="flex items-center justify-between mb-4">
