--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
   <section class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 py-16">
     <div class="flex items-center justify-between mb-6">
       <h2 class="text-3xl font-bold">Action Shots</h2>
-      <a href="#" class="text-sm font-semibold text-blue-600 hover:underline">View all photos</a>
+      <a href="gallery.html" class="text-sm font-semibold text-blue-600 hover:underline">View all photos</a>
     </div>
     <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-3">
       <img src="assets/img/gallery-1.jpg" alt="Match action 1" class="rounded-xl object-cover aspect-[4/3]" />
