--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
   <section class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 py-16">
     <h2 class="text-3xl font-bold text-center mb-10">Why Join Us?</h2>
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6">
-      <div class="rounded-2xl border bg-white p-6 shadow-sm hover:shadow-md transition">
+      <a href="tournament.html" class="block rounded-2xl border bg-white p-6 shadow-sm hover:shadow-md transition">
         <div class="text-3xl mb-3">⚽</div>
         <h3 class="font-semibold mb-1">Competitive Tournaments</h3>
         <p class="text-gray-600 text-sm">Well-structured fixtures, fair play, and thrilling matchdays.</p>
-      </div>
+      </a>
       <div class="rounded-2xl border bg-white p-6 shadow-sm hover:shadow-md transition">
         <div class="text-3xl mb-3">🤝</div>
         <h3 class="font-semibold mb-1">Community Spirit</h3>
@@ -102,11 +102,11 @@
         <h3 class="font-semibold mb-1">Recognition & Awards</h3>
         <p class="text-gray-600 text-sm">Trophies, medals, and shout-outs for standout performances.</p>
       </div>
-      <div class="rounded-2xl border bg-white p-6 shadow-sm hover:shadow-md transition">
-        <div class="text-3xl mb-3">📸</div>
-        <h3 class="font-semibold mb-1">Event Highlights & Photos</h3>
-        <p class="text-gray-600 text-sm">Relive the best moments with curated galleries and reels.</p>
-      </div>
+        <a href="gallery.html" class="block rounded-2xl border bg-white p-6 shadow-sm hover:shadow-md transition">
+          <div class="text-3xl mb-3">📸</div>
+          <h3 class="font-semibold mb-1">Event Highlights & Photos</h3>
+          <p class="text-gray-600 text-sm">Relive the best moments with curated galleries and reels.</p>
+        </a>
     </div>
   </section>
 
