--- a/gallery.html
+++ b/gallery.html
@@ -136,7 +136,7 @@
   <!-- Header injection (reuse your existing header component) -->
   <script type="module">
     import { injectHeader } from "./tournament_header.js";
-    injectHeader("#site-header", { active: "fixtures" });
+    injectHeader("#site-header", { active: "photos" });
   </script>
 
   <!-- Gallery interactions -->
