--- a/team_results.html
+++ b/team_results.html
@@ -250,7 +250,7 @@
   <!-- Header injection -->
   <script type="module">
     import { injectHeader } from "./tournament_header.js";
-    injectHeader("#site-header", { active: "fixtures" });
+    injectHeader("#site-header", { active: "results" });
   </script>
 </body>
 </html>
