--- a/gallery.html
+++ b/gallery.html
@@ -135,7 +135,7 @@
 
   <!-- Header injection (reuse your existing header component) -->
   <script type="module">
-    import { injectHeader } from "./tournament_header.js";
+    import { injectHeader } from "./header.js";
     injectHeader("#site-header", { active: "photos" });
   </script>
 
