--- a/tournament_gallery.html
+++ b/tournament_gallery.html
@@ -1,1 +1,264 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Photos - We Are Eleven</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    /* Base look & feel to match your standings page */
+    body { font-family: 'Inter', system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial; background: linear-gradient(135deg, #f8fafc 0%, #f1f5f9 100%); color: #1e293b; }
 
+    .section-header { background: linear-gradient(135deg, #ffffff 0%, #f8fafc 100%); border: 1px solid #e2e8f0; position: relative; overflow: hidden; }
+    .section-header::before { content: ''; position: absolute; top: 0; left: -100%; width: 100%; height: 2px; background: linear-gradient(90deg, transparent, #64748b, transparent); animation: shimmer 3s infinite; }
+    @keyframes shimmer { 0% { left: -100%; } 100% { left: 100%; } }
+
+    /* Photo cards */
+    .photo-card { border-radius: 1rem; border: 1px solid #e5e7eb; overflow: hidden; background: #ffffff; box-shadow: 0 2px 6px rgba(0,0,0,0.08); display: flex; flex-direction: column; }
+    .photo-img { display: block; width: 100%; height: 220px; object-fit: cover; transition: transform .35s ease; }
+    .photo-card:hover .photo-img { transform: scale(1.03); }
+    .photo-meta { padding: .85rem 1rem; display: flex; align-items: center; justify-content: space-between; gap: .75rem; }
+
+    .chip { font-size: .72rem; padding: .2rem .55rem; border-radius: 9999px; border: 1px solid #cbd5e1; background:#f8fafc; white-space: nowrap; }
+
+    /* Lightbox */
+    .lightbox-open { overflow: hidden; }
+  </style>
+</head>
+<body class="flex flex-col min-h-screen">
+  <!-- Header mount -->
+  <div id="site-header"></div>
+
+  <main class="flex-grow max-w-7xl mx-auto p-6 space-y-10">
+    <!-- Page Title / Hero -->
+    <section class="section-header rounded-2xl shadow-lg p-8">
+      <div class="flex flex-col md:flex-row md:items-end md:justify-between gap-6">
+        <div>
+          <h1 class="text-4xl font-extrabold text-gray-900">Photo Gallery</h1>
+          <p class="mt-2 text-gray-600">Highlights from groups, knockouts, and behind-the-scenes. Click any photo to view full-screen.</p>
+        </div>
+        <div class="flex items-center gap-3">
+          <button id="downloadAllBtn" class="px-3 py-2 rounded-xl border bg-white hover:bg-slate-50 text-sm">Download selected</button>
+          <label class="px-3 py-2 rounded-xl border bg-white hover:bg-slate-50 text-sm cursor-pointer">
+            <input type="file" id="uploader" accept="image/*" class="hidden" multiple>
+            Upload
+          </label>
+        </div>
+      </div>
+
+      <!-- Filters -->
+      <div class="mt-6 flex flex-wrap items-center gap-2">
+        <button class="filter-btn chip" data-filter="all" aria-pressed="true">All</button>
+        <button class="filter-btn chip" data-filter="group-a">Group A</button>
+        <button class="filter-btn chip" data-filter="group-b">Group B</button>
+        <button class="filter-btn chip" data-filter="semis">Semi-finals</button>
+        <button class="filter-btn chip" data-filter="third">Third Place</button>
+        <button class="filter-btn chip" data-filter="final">Final</button>
+        <button class="filter-btn chip" data-filter="bts">Behind the Scenes</button>
+      </div>
+    </section>
+
+    <!-- Gallery Grid -->
+    <section class="section-header rounded-2xl shadow-lg p-6">
+      <div class="grid gap-6 grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4" id="gallery">
+        <!-- SAMPLE CARDS — replace src with your paths -->
+        <figure class="photo-card" data-category="group-a" data-title="Group A kickoff">
+          <img class="photo-img" src="photos/group-a-1.jpg" alt="Group A kickoff" loading="lazy"/>
+          <figcaption class="photo-meta">
+            <span class="text-sm font-medium truncate">Group A · Kickoff</span>
+            <span class="chip">Group A</span>
+          </figcaption>
+        </figure>
+
+        <figure class="photo-card" data-category="group-b" data-title="Group B warm-up">
+          <img class="photo-img" src="photos/group-b-1.jpg" alt="Group B warm-up" loading="lazy"/>
+          <figcaption class="photo-meta">
+            <span class="text-sm font-medium truncate">Warm-up Drills</span>
+            <span class="chip">Group B</span>
+          </figcaption>
+        </figure>
+
+        <figure class="photo-card" data-category="semis" data-title="Semi-final action">
+          <img class="photo-img" src="photos/semis-1.jpg" alt="Semi-final action" loading="lazy"/>
+          <figcaption class="photo-meta">
+            <span class="text-sm font-medium truncate">Semi-final · Tackle</span>
+            <span class="chip">Semi-finals</span>
+          </figcaption>
+        </figure>
+
+        <figure class="photo-card" data-category="final" data-title="Final celebrations">
+          <img class="photo-img" src="photos/final-1.jpg" alt="Final celebrations" loading="lazy"/>
+          <figcaption class="photo-meta">
+            <span class="text-sm font-medium truncate">Champions Lift</span>
+            <span class="chip">Final</span>
+          </figcaption>
+        </figure>
+
+        <figure class="photo-card" data-category="third" data-title="Third place match">
+          <img class="photo-img" src="photos/third-1.jpg" alt="Third place match" loading="lazy"/>
+          <figcaption class="photo-meta">
+            <span class="text-sm font-medium truncate">Third Place · Duel</span>
+            <span class="chip">Third Place</span>
+          </figcaption>
+        </figure>
+
+        <figure class="photo-card" data-category="bts" data-title="Behind the scenes">
+          <img class="photo-img" src="photos/bts-1.jpg" alt="Behind the scenes" loading="lazy"/>
+          <figcaption class="photo-meta">
+            <span class="text-sm font-medium truncate">Team Talk</span>
+            <span class="chip">BTS</span>
+          </figcaption>
+        </figure>
+
+        <!-- Add more items as needed -->
+      </div>
+    </section>
+  </main>
+
+  <!-- Lightbox Modal -->
+  <div id="lightbox" class="fixed inset-0 bg-black/80 backdrop-blur-sm items-center justify-center hidden z-50">
+    <button id="lbClose" class="absolute top-4 right-4 p-2 rounded-full bg-white/10 hover:bg-white/20 text-white" aria-label="Close (Esc)">✕</button>
+    <button id="lbPrev" class="absolute left-2 md:left-6 top-1/2 -translate-y-1/2 p-3 rounded-full bg-white/10 hover:bg-white/20 text-white" aria-label="Previous (←)">‹</button>
+    <figure class="max-w-5xl w-[92vw] md:w-[80vw]">
+      <img id="lbImg" src="" alt="" class="w-full max-h-[80vh] object-contain rounded-xl" />
+      <figcaption id="lbCap" class="mt-3 text-center text-gray-200"></figcaption>
+    </figure>
+    <button id="lbNext" class="absolute right-2 md:right-6 top-1/2 -translate-y-1/2 p-3 rounded-full bg-white/10 hover:bg-white/20 text-white" aria-label="Next (→)">›</button>
+  </div>
+
+  <!-- Footer -->
+  <footer class="bg-gray-950 py-8 text-center text-gray-400 mt-12">
+    <div class="max-w-4xl mx-auto px-4">
+      <p class="text-lg">© 2025 Football Community. All Rights Reserved.</p>
+    </div>
+  </footer>
+
+  <!-- Header injection (reuse your existing header component) -->
+  <script type="module">
+    import { injectHeader } from "./header.js";
+    injectHeader("#site-header", { active: "photos" });
+  </script>
+
+  <!-- Gallery interactions -->
+  <script>
+    // --- Filtering ---
+    const filterBtns = Array.from(document.querySelectorAll('.filter-btn'));
+    const gallery = document.getElementById('gallery');
+    const cards = Array.from(gallery.querySelectorAll('.photo-card'));
+
+    function applyFilter(cat) {
+      cards.forEach(card => {
+        const show = cat === 'all' || card.dataset.category === cat;
+        card.classList.toggle('hidden', !show);
+      });
+    }
+
+    filterBtns.forEach(btn => {
+      btn.addEventListener('click', () => {
+        filterBtns.forEach(b => b.setAttribute('aria-pressed', 'false'));
+        btn.setAttribute('aria-pressed', 'true');
+        applyFilter(btn.dataset.filter);
+      });
+    });
+
+    // --- Lightbox ---
+    const lb = document.getElementById('lightbox');
+    const lbImg = document.getElementById('lbImg');
+    const lbCap = document.getElementById('lbCap');
+    const lbClose = document.getElementById('lbClose');
+    const lbPrev = document.getElementById('lbPrev');
+    const lbNext = document.getElementById('lbNext');
+
+    let currentIndex = -1;
+    const visibleCards = () => cards.filter(c => !c.classList.contains('hidden'));
+
+    function openAt(index) {
+      const list = visibleCards();
+      if (!list.length) return;
+      currentIndex = Math.max(0, Math.min(index, list.length - 1));
+      const fig = list[currentIndex];
+      const img = fig.querySelector('img');
+      lbImg.src = img.src;
+      lbImg.alt = img.alt || '';
+      lbCap.textContent = fig.dataset.title || img.alt || '';
+      lb.classList.remove('hidden');
+      document.body.classList.add('lightbox-open');
+      lb.focus();
+    }
+
+    function closeLb() {
+      lb.classList.add('hidden');
+      document.body.classList.remove('lightbox-open');
+      lbImg.src = '';
+    }
+
+    function step(dir) {
+      const list = visibleCards();
+      if (!list.length) return;
+      currentIndex = (currentIndex + dir + list.length) % list.length;
+      const fig = list[currentIndex];
+      const img = fig.querySelector('img');
+      lbImg.src = img.src;
+      lbImg.alt = img.alt || '';
+      lbCap.textContent = fig.dataset.title || img.alt || '';
+    }
+
+    cards.forEach((fig, i) => {
+      fig.addEventListener('click', () => {
+        // derive index among currently visible items
+        const vis = visibleCards();
+        const idx = vis.indexOf(fig);
+        openAt(idx === -1 ? 0 : idx);
+      });
+    });
+
+    lbClose.addEventListener('click', closeLb);
+    lbPrev.addEventListener('click', () => step(-1));
+    lbNext.addEventListener('click', () => step(1));
+
+    lb.addEventListener('click', (e) => {
+      if (e.target === lb) closeLb();
+    });
+
+    document.addEventListener('keydown', (e) => {
+      if (lb.classList.contains('hidden')) return;
+      if (e.key === 'Escape') closeLb();
+      if (e.key === 'ArrowLeft') step(-1);
+      if (e.key === 'ArrowRight') step(1);
+    });
+
+    // --- Simple uploader (adds thumbnails locally) ---
+    const uploader = document.getElementById('uploader');
+    uploader.addEventListener('change', (e) => {
+      const files = Array.from(e.target.files || []);
+      files.forEach(file => {
+        if (!file.type.startsWith('image/')) return;
+        const url = URL.createObjectURL(file);
+        const fig = document.createElement('figure');
+        fig.className = 'photo-card';
+        fig.dataset.category = 'bts';
+        fig.dataset.title = file.name;
+        fig.innerHTML = `
+          <img class="photo-img" src="${url}" alt="${file.name}" loading="lazy"/>
+          <figcaption class="photo-meta">
+            <span class="text-sm font-medium truncate">${file.name}</span>
+            <span class="chip">Uploaded</span>
+          </figcaption>
+        `;
+        fig.addEventListener('click', () => {
+          const vis = visibleCards();
+          const idx = vis.indexOf(fig);
+          openAt(idx === -1 ? 0 : idx);
+        });
+        gallery.prepend(fig);
+      });
+      uploader.value = '';
+    });
+
+    // --- Stub for download selected (extend as needed) ---
+    document.getElementById('downloadAllBtn').addEventListener('click', () => {
+      alert('Select & download flow can be wired to a ZIP generator or backend.');
+    });
+  </script>
+</body>
+</html>
