--- a/tournament_gallery.html
+++ b/tournament_gallery.html
@@ -135,8 +135,8 @@
 
   <!-- Header injection (reuse your existing header component) -->
   <script type="module">
-    import { injectHeader } from "./header.js";
-    injectHeader("#site-header", { active: "photos" });
+    import { injectHeader } from "./tournament_header.js";
+    injectHeader("#site-header", { active: "tournament_photos" });
   </script>
 
   <!-- Gallery interactions -->
